Adds Javascript file and several stylistic changes

--- a/index.html
+++ b/index.html
@@ -1,28 +1,74 @@
-<html lang="en"><head><link rel="stylesheet" type="text/css" href="styles.css">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="utf-8">
     <title>Panoramic56</title>
- <link rel="icon" type="image/x-icon" href="docs/assets/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="docs/assets/images/favicon.ico">
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
+
 <body>
-    <div class="header-subheader-combine">
-        <header class="index_header"><h5>BPanoramic56</h5></header>
-        <h6 class="subheader">Ideas brought to code</h6>
+
+    <div class="intro-div">
+        <h1 class="logo-header">
+            <img class="intro-logo"src="docs/assets/images/Panoramic-3.png"><span class="intro-logo">
+        </h1>
     </div>
 
-        <div class="introduction-div">
-            <h3>Bruno, you forgot the <a class="introduction-link" href="introduction_page.html" target="blank" rel="noopener noreferer">Introduction</a> again!</h3>
-        </div>
+    <script src="script.js"></script>
+
+    <div class="side-nav">
+        <nav class="nav-bar">
+            <ul>
+                <li>
+                    <a href="#" class="logo">
+                        <img src="docs/assets/images/Panoramic-removebg-preview.jpg">
+                        <span class="nav-item">BPanoramic56</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class='fas bx bxs-landscape'></i>
+                        <span class="nav-item">Home</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class='fas bx bxs-grid-alt'></i>
+                        <span class="nav-item">Projects</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class='fas bx bxs-server'></i> <span class="nav-item">Server</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class='fas bx bxs-info-square'></i>
+                        <span class="nav-item">About</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="main">
         <h2 class="Projects">Projects: </h2>
         <div class="master-projects-div">
-        
+
             <div class="project-card"><img src="docs/assets/images/DiagramSymbol.png">
                 <h3>Mental Charts</h3>
-                <h5>Some minor plans that I might pursue, with classes and degree requirements</h5><a href="plan_graphs.html" class="btn">Read More</a>
-            </div>  
-            
+                <h5>Some minor plans that I might pursue, with classes and degree requirements</h5><a
+                    href="plan_graphs.html" class="btn">Read More</a>
+            </div>
+
             <div class="project-card">
                 <img src="docs/assets/images/ServerSymbol.png">
-                 <h3>Server</h3>            <h5>Website with links to my server, currently running on a Ubuntu instance in an old computer</h5>
+                <h3>Server</h3>
+                <h5>Website with links to my server, currently running on a Ubuntu instance in an old computer</h5>
                 <a href="server_page.html" class="btn">Read More</a>
             </div>
         </div>
@@ -30,21 +76,28 @@
         <div class="links">
             <div class="link-image">
                 <a class="project_links" href="https://github.com/BPanoramic56" target="blank" rel="noopener noreferer">
-                    <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Github-Symbol.jpg">
+                    <img
+                        src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Github-Symbol.jpg">
                 </a>
             </div>
             <div class="link-image">
-                <a class="project_links" href="./odin_project_recipes_main_page.html" target="blank" rel="noopener noreferer">
-                    <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/The-Odin-Project-Symbol.jpg">
+                <a class="project_links" href="./odin_project_recipes_main_page.html" target="blank"
+                    rel="noopener noreferer">
+                    <img
+                        src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/The-Odin-Project-Symbol.jpg">
                 </a>
-            </div> 
+            </div>
             <div class="link-image">
-                <a class="project_links" href="https://www.linkedin.com/in/bruno-gomes-pascotto-6640a5230" target="blank" rel="noopener noreferer">
-                    <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Linkedin-Symbol.jpg">
+                <a class="project_links" href="https://www.linkedin.com/in/bruno-gomes-pascotto-6640a5230"
+                    target="blank" rel="noopener noreferer">
+                    <img
+                        src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Linkedin-Symbol.jpg">
                 </a>
             </div>
         </div>
 
+    </div>
 
-    </body>
+</body>
+
 </html>
