Minor style changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="utf-8">
     <title>Panoramic56</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="docs/assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="docs/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="docs/assets/images/favicon-16x16.png">
+    <link rel="manifest" href="docs/assets/images/site.webmanifest">
     <link rel="icon" type="image/x-icon" href="docs/assets/images/favicon.ico">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
@@ -73,30 +77,23 @@
             </div>
         </div>
 
+    </div>
+    <div class="master-footer">
         <div class="links">
             <div class="link-image">
                 <a class="project_links" href="https://github.com/BPanoramic56" target="blank" rel="noopener noreferer">
-                    <img
-                        src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Github-Symbol.jpg">
+                    <i class='bx bxl-github'></i>
                 </a>
             </div>
-            <div class="link-image">
-                <a class="project_links" href="./odin_project_recipes_main_page.html" target="blank"
-                    rel="noopener noreferer">
-                    <img
-                        src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/The-Odin-Project-Symbol.jpg">
-                </a>
-            </div>
+            
             <div class="link-image">
                 <a class="project_links" href="https://www.linkedin.com/in/bruno-gomes-pascotto-6640a5230"
                     target="blank" rel="noopener noreferer">
-                    <img
-                        src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Linkedin-Symbol.jpg">
+                    <i class='bx bxl-linkedin-square' ></i>
                 </a>
             </div>
         </div>
-
-    </div>
+    </footer>
 
 </body>
 
