Separate JS files and adds hovering affects to diagrams

--- a/index.html
+++ b/index.html
@@ -5,30 +5,30 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="utf-8">
     <title>Panoramic56</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="docs/assets/images/apple-touch-icon.png">
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="docs/assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="docs/assets/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="docs/assets/images/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="docs/assets/images/favicon-16x16.png"> -->
     <link rel="manifest" href="docs/assets/images/site.webmanifest">
-    <link rel="icon" type="image/x-icon" href="docs/assets/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="docs/assets/images/Panoramic-4.ico">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="index">
 
     <div class="intro-div">
         <h1 class="logo-header">
-            <img class="intro-logo"src="docs/assets/images/Panoramic-3.png"><span class="intro-logo">
+            <img class="intro-logo"src="docs/assets/images/Panoramic-4-bg.jpg"><span class="intro-logo">
         </h1>
     </div>
 
-    <script src="script.js"></script>
+    <script src="IndexScript.js"></script>
 
     <div class="side-nav">
         <nav class="nav-bar">
             <ul>
                 <li>
                     <a href="#" class="logo">
-                        <img src="docs/assets/images/Panoramic-removebg-preview.jpg">
+                        <img src="docs/assets/images/Panoramic-4.png">
                         <span class="nav-item">BPanoramic56</span>
                     </a>
                 </li>
@@ -78,22 +78,6 @@
         </div>
 
     </div>
-    <div class="master-footer">
-        <div class="links">
-            <div class="link-image">
-                <a class="project_links" href="https://github.com/BPanoramic56" target="blank" rel="noopener noreferer">
-                    <i class='bx bxl-github'></i>
-                </a>
-            </div>
-            
-            <div class="link-image">
-                <a class="project_links" href="https://www.linkedin.com/in/bruno-gomes-pascotto-6640a5230"
-                    target="blank" rel="noopener noreferer">
-                    <i class='bx bxl-linkedin-square' ></i>
-                </a>
-            </div>
-        </div>
-    </footer>
 
 </body>
 
