--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="utf-8">
     <title>Panoramic56</title>
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="docs/assets/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="docs/assets/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="docs/assets/images/favicon-16x16.png"> -->
-    <link rel="manifest" href="docs/assets/images/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="icon" type="image/x-icon" href="docs/assets/images/Panoramic-4.ico">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
