--- a/plan_graphs.html
+++ b/plan_graphs.html
@@ -3,8 +3,11 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <meta charset="utf-8">
-    <title>Panoramic56-Diagrams</title>
+    <meta charset="utf-8"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <title>Panoramic56</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 
