--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
         </h1>
     </div>
 
-    <script src="IndexScript.js"></script>
-
     <div class="side-nav">
         <nav class="nav-bar">
             <ul>
                 <li>
-                    <a href="#" class="logo">
+                    <a href="index.html" class="logo">
                         <img src="docs/assets/images/Panoramic-4.png">
                         <span class="nav-item">BPanoramic56</span>
                     </a>
@@ -45,7 +43,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="server_page.html">
                         <i class='fas bx bxs-server'></i> <span class="nav-item">Server</span>
                     </a>
                 </li>
@@ -75,9 +73,48 @@
                 <h5>Website with links to my server, currently running on a Ubuntu instance in an old computer</h5>
                 <a href="server_page.html" class="btn">Read More</a>
             </div>
+
+            <div class="project-card">
+                <img src="docs/assets/images/ServerSymbol.png">
+                <h3>Server</h3>
+                <h5>Website with links to my server, currently running on a Ubuntu instance in an old computer</h5>
+                <a href="server_page.html" class="btn">Read More</a>
+            </div> 
+            <div class="project-card">
+                <img src="docs/assets/images/ServerSymbol.png">
+                <h3>Server</h3>
+                <h5>Website with links to my server, currently running on a Ubuntu instance in an old computer</h5>
+                <a href="server_page.html" class="btn">Read More</a>
+            </div> 
+            <div class="project-card">
+                <img src="docs/assets/images/ServerSymbol.png">
+                <h3>Server</h3>
+                <h5>Website with links to my server, currently running on a Ubuntu instance in an old computer</h5>
+                <a href="server_page.html" class="btn">Read More</a>
+            </div> 
+            <div class="project-card">
+                <img src="docs/assets/images/ServerSymbol.png">
+                <h3>Server</h3>
+                <h5>Website with links to my server, currently running on a Ubuntu instance in an old computer</h5>
+                <a href="server_page.html" class="btn">Read More</a>
+            </div> 
+            <div class="project-card">
+                <img src="docs/assets/images/ServerSymbol.png">
+                <h3>Server</h3>
+                <h5>Website with links to my server, currently running on a Ubuntu instance in an old computer</h5>
+                <a href="server_page.html" class="btn">Read More</a>
+            </div>
+            <div class="project-card">
+                    <img src="docs/assets/images/ServerSymbol.png">
+                    <h3>Server</h3>
+                    <h5>Website with links to my server, currently running on a Ubuntu instance in an old computer</h5>
+                    <a href="server_page.html" class="btn">Read More</a>
+            </div>
         </div>
 
     </div>
+
+    <script src="IndexScript.js"></script>
 
 </body>
 
