--- a/plan_graphs.html
+++ b/plan_graphs.html
@@ -3,11 +3,13 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <meta charset="utf-8"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <meta charset="utf-8">
     <title>Panoramic56</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"> -->
+    <!-- <link rel="manifest" href="/site.webmanifest"> -->
+    <link rel="icon" type="image/x-icon" href="docs/assets/images/Panoramic-4.ico">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 
@@ -16,30 +18,30 @@
         <nav class="nav-bar">
             <ul>
                 <li>
-                    <a href="#" class="logo">
+                    <a href="index.html" class="logo" rel="noopener noreferer">
                         <img src="docs/assets/images/Panoramic-4.png">
                         <span class="nav-item">BPanoramic56</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" rel="noopener noreferer">
                         <i class="fas bx bxs-landscape"></i>
                         <span class="nav-item">Home</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" rel="noopener noreferer">
                         <i class="fas bx bxs-grid-alt"></i>
                         <span class="nav-item">Projects</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="server_page.html" rel="noopener noreferer">
                         <i class="fas bx bxs-server"></i> <span class="nav-item">Server</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" rel="noopener noreferer">
                         <i class="fas bx bxs-info-square"></i>
                         <span class="nav-item">About</span>
                     </a>
@@ -49,24 +51,29 @@
     </div>
 
     <div class="main">
-
-        <div class="ChartDiv">
-            <iframe frameborder="0"
-                src="https://viewer.diagrams.net/?tags=%7B%7D&amp;highlight=0000ff&amp;edit=_blank&amp;layers=1&amp;nav=1&amp;title=CS3500Chart#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FBPanoramic56%2FDegreePlan%2Fmain%2FCS3500Chart">
-            </iframe>
-            <p class="OverlayText">CS3500 Chart</p>
+        <h2>Mental Charts</h2>
+        <p>This is a list of all the mental charts I have done as part of my college degree or else</p>
+        <p>Most of these were made in the website <strong><a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://draw.io/&ved=2ahUKEwj6ufmZkcWHAxVmJ0QIHau1MIEQFnoECAYQAQ&usg=AOvVaw024Sqrn6z90YtvKcsRPqIi" target="_blank" rel="noopener noreferer">Draw.io</a></strong></p>
+        <p>Hover over any diagram to extend it</p>
+        <div class="master-chart-div">
+            <div class="ChartDiv">
+                <iframe frameborder="0"
+                    src="https://viewer.diagrams.net/?tags=%7B%7D&amp;highlight=0000ff&amp;edit=_blank&amp;layers=1&amp;nav=1&amp;title=CS3500Chart#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FBPanoramic56%2FDegreePlan%2Fmain%2FCS3500Chart">
+                </iframe>
+                <p class="OverlayText">CS3500 Chart</p>
+                <p class="LowerText">A simple diagram about the CS3500 project Spreadsheet</p>
+            </div>
+            <div class="ChartDiv">
+                <iframe frameborder="0"
+                    src="https://viewer.diagrams.net/?tags=%7B%7D&amp;highlight=0000ff&amp;edit=_blank&amp;layers=1&amp;nav=1&amp;title=NuclearEngineeringMinor.drawio.html#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FBPanoramic56%2FDegreePlan%2Fmain%2FNuclearEngineeringMinor.drawio.html"></iframe>
+                <p class="OverlayText">Nuclear Engineering Minor Chart</p>
+                <p class="LowerText">A list of requirements for the Nuclear Engineering Minor in the University of Utah
+                </p>
+            </div>
         </div>
-        <div class="ChartDiv">
-            <iframe class="DiagramIframe" frameborder="0"
-                src="https://viewer.diagrams.net/?tags=%7B%7D&amp;highlight=0000ff&amp;edit=_blank&amp;layers=1&amp;nav=1&amp;title=NuclearEngineeringMinor.drawio.html#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FBPanoramic56%2FDegreePlan%2Fmain%2FNuclearEngineeringMinor.drawio.html"></iframe>
-            <p class="OverlayText">Nuclear Engineering Minor Chart</p>
-        </div>
-        <script src="DiagramsScript.js"></script>
 
     </div>
-
-
-
+    <script src="DiagramsScript.js"></script>
 
 </body>
 
