--- a/server_page.html
+++ b/server_page.html
@@ -1,40 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head><link rel="stylesheet" type="text/css" href="styles.css">
-        <meta charset="utf-8">
-        <title>Server56</title>
-    </head>
-    <body>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="utf-8">
+    <title>Panoramic56</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" type="image/x-icon" href="docs/assets/images/Panoramic-4.ico">
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="side-nav">
+        <nav class="nav-bar">
+            <ul>
+                <li>
+                    <a href="index.html" class="logo">
+                        <img src="docs/assets/images/Panoramic-4.png">
+                        <span class="nav-item">BPanoramic56</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class='fas bx bxs-landscape'></i>
+                        <span class="nav-item">Home</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class='fas bx bxs-grid-alt'></i>
+                        <span class="nav-item">Projects</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="server_page.html">
+                        <i class='fas bx bxs-server'></i> <span class="nav-item">Server</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class='fas bx bxs-info-square'></i>
+                        <span class="nav-item">About</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    <div class="main">
+
         <div class="header-subheader-combine">
-            <header class="index_header"><h5>Server56</h5></header>
+            <header class="index_header">
+                <h5>Server56</h5>
+            </header>
             <h6 class="subheader">Main Server Hub</h6>
         </div>
 
         <div>
             <div class="server-links-div">
                 <div class="Apache-box">
-                    <a class="project_links" href="http://10.120.56.30" target="blank" rel="noopener noreferer">Apache</a>
+                    <a class="project_links" href="http://10.120.56.30" target="blank"
+                        rel="noopener noreferer">Apache</a>
                 </div>
                 <div class="Atheos-box">
-                    <h4><a class="project_links" href="http://10.120.56.30:8084" target="blank" rel="noopener noreferer">Atheos</a> - Atheos Web UI Interface</h4>
-                    <p>"A web-based IDE framework with a small footprint and minimal requirements, built on top of Codiad"</p>
+                    <h4><a class="project_links" href="http://10.120.56.30:8084" target="blank"
+                            rel="noopener noreferer">Atheos</a> - Atheos Web UI Interface</h4>
+                    <p>"A web-based IDE framework with a small footprint and minimal requirements, built on top of
+                        Codiad"
+                    </p>
                 </div>
                 <div class="CockPit-box">
-                    <h4><a class="project_links" href="http://10.120.56.30:9090" target="blank" rel="noopener noreferer">CockPit</a> - CockPit Web UI Interface</h4>
+                    <h4><a class="project_links" href="http://10.120.56.30:9090" target="blank"
+                            rel="noopener noreferer">CockPit</a> - CockPit Web UI Interface</h4>
                     <p>Server Management UI Interface</p>
                 </div>
                 <div class="Nextcloud-box">
-                    <h4><a class="project_links" href="http://10.120.56.30:443" target="blank" rel="noopener noreferer">NextCloud</a> - Nextloud Web UI Main Page</h4>
+                    <h4><a class="project_links" href="http://10.120.56.30:443" target="blank"
+                            rel="noopener noreferer">NextCloud</a> - Nextloud Web UI Main Page</h4>
                 </div>
                 <div class="Portainer-box">
-                    <h4><a class="project_links" href="http://10.120.56.30:9000" target="blank" rel="noopener noreferer">Portainer</a> - Portainer Web UI Main Page</h4>
+                    <h4><a class="project_links" href="http://10.120.56.30:9000" target="blank"
+                            rel="noopener noreferer">Portainer</a> - Portainer Web UI Main Page</h4>
                 </div>
                 <div class="Scrutiny-box">
-                    <h4><a class="project_links" href="http://10.120.56.30:8080" target="blank" rel="noopener noreferer">Scrutiny</a> - Scrutiny Main Page (Not completely set up yet)</h4>
+                    <h4><a class="project_links" href="http://10.120.56.30:8080" target="blank"
+                            rel="noopener noreferer">Scrutiny</a> - Scrutiny Main Page (Not completely set up yet)</h4>
                 </div>
             </div>
         </div>
+    </div>
 
-        <a class="project_links" href="./index.html"  target="blank" rel="noopener noreferer">Back to Main Page</a>
-    </body>
+    <a class="project_links" href="./index.html" target="blank" rel="noopener noreferer">Back to Main Page</a>
+</body>
+
 </html>
