Trying cors-things and adding new ongoing project

--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
             </div>
 
             <div class="project-card">
-                <img src="docs/assets/images/ServerSymbol.png">
+                <img src="docs/assets/images/9857919.png">
                 <h3>Server</h3>
                 <h5>Website with links to my server, currently running on a Ubuntu instance in an old computer</h5>
                 <a href="server_page.html" class="btn">Read More</a>
             </div>
 
             <div class="project-card">
-                <img src="docs/assets/images/ServerSymbol.png">
+                <img src="docs/assets/images/arrival-airport-sign-icon-dde665.png.webp">
                 <h3>Server</h3>
-                <h5>Website with links to my server, currently running on a Ubuntu instance in an old computer</h5>
-                <a href="server_page.html" class="btn">Read More</a>
+                <h5>(WIP) Digital recreation of what an airport arrival/departure sign would look like at this moment</h5>
+                <a href="digital_airport.html" class="btn">Read More</a>
             </div> 
             <div class="project-card">
                 <img src="docs/assets/images/ServerSymbol.png">
