--- a/server_page.html
+++ b/server_page.html
@@ -51,48 +51,57 @@
     </div>
     <div class="main">
 
-        <div class="header-subheader-combine">
-            <header class="index_header">
-                <h5>Server56</h5>
-            </header>
-            <h6 class="subheader">Main Server Hub</h6>
-        </div>
-
         <div>
             <div class="server-links-div">
                 <div class="Apache-box">
-                    <a class="project_links" href="http://10.120.56.30" target="blank"
-                        rel="noopener noreferer">Apache</a>
+                    <a class="project_links" href="" target="blank"
+                        rel="noopener noreferer">Apache
+                    </a>
                 </div>
+
                 <div class="Atheos-box">
-                    <h4><a class="project_links" href="http://10.120.56.30:8084" target="blank"
-                            rel="noopener noreferer">Atheos</a> - Atheos Web UI Interface</h4>
+                    <h4><a class="project_links" href="" target="blank"
+                            rel="noopener noreferer">Atheos
+                        </a> - Atheos Web UI Interface
+                    </h4>
                     <p>"A web-based IDE framework with a small footprint and minimal requirements, built on top of
                         Codiad"
                     </p>
                 </div>
+
                 <div class="CockPit-box">
-                    <h4><a class="project_links" href="http://10.120.56.30:9090" target="blank"
-                            rel="noopener noreferer">CockPit</a> - CockPit Web UI Interface</h4>
+                    <h4>
+                        <a class="project_links" href="" target="blank"
+                            rel="noopener noreferer">CockPit
+                        </a> - CockPit Web UI Interface
+                    </h4>
                     <p>Server Management UI Interface</p>
                 </div>
+
                 <div class="Nextcloud-box">
-                    <h4><a class="project_links" href="http://10.120.56.30:443" target="blank"
-                            rel="noopener noreferer">NextCloud</a> - Nextloud Web UI Main Page</h4>
+                    <h4>
+                        <a class="project_links" href="" target="blank"
+                            rel="noopener noreferer">NextCloud
+                        </a> - Nextloud Web UI Main Page
+                    </h4>
                 </div>
+
                 <div class="Portainer-box">
-                    <h4><a class="project_links" href="http://10.120.56.30:9000" target="blank"
+                    <h4><a class="project_links" href="" target="blank"
                             rel="noopener noreferer">Portainer</a> - Portainer Web UI Main Page</h4>
                 </div>
+
                 <div class="Scrutiny-box">
-                    <h4><a class="project_links" href="http://10.120.56.30:8080" target="blank"
+                    <h4><a class="project_links" href="" target="blank"
                             rel="noopener noreferer">Scrutiny</a> - Scrutiny Main Page (Not completely set up yet)</h4>
                 </div>
+
             </div>
         </div>
+        <a class="project_links" href="./index.html" target="blank" rel="noopener noreferer">Back to Main Page</a>
+
     </div>
 
-    <a class="project_links" href="./index.html" target="blank" rel="noopener noreferer">Back to Main Page</a>
 </body>
 
 </html>
