--- a/chocolate_chip_coffee_cake.html
+++ b/chocolate_chip_coffee_cake.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="styles.css" />
+<link rel="stylesheet" type="text/css" href="./src/main.css" />
 <html lang="en">
     <head>
         <meta charset="utf-8">
