--- a/introduction_page.html
+++ b/introduction_page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head><link rel="stylesheet" type="text/css" href="styles.css">
+    <head><link rel="stylesheet" type="text/css" href="./src/main.css">
         <meta charset="utf-8">
         <title>Panoramic56</title>
         <link rel="icon" type="image/x-icon" href="docs/assets/images/favicon.ico">
