--- a/src/plan_graphs.html
+++ b/src/plan_graphs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles.css">
     <meta charset="utf-8">
     <title>Panoramic56</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
