--- a/src/template.html
+++ b/src/template.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./styles.css"> -->
     <meta charset="utf-8">
     <title>Panoramic56</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="docs/assets/images/apple-touch-icon.png">
+    <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="/site.webmanifest"> -->
     <link rel="icon" type="image/x-icon" href="docs/assets/images/Panoramic-4.ico">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
@@ -113,9 +113,7 @@
         </div>
 
     </div>
-
-    <script src="IndexScript.js"></script>
-
+    
 </body>
 
 </html>
