Fixing dummy index url

--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="refresh" content="0; url=https://github.com/BPanoramic56/Website/blob/main/src/template.html">
+    <meta http-equiv="refresh" content="0; url=https://BPanoramic56/Website/index.html">
 </head>
