--- a/src/digital_airport.html
+++ b/src/digital_airport.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" type="text/css" href="./styles.css">
     <meta charset="utf-8">
     <title>Panoramic56</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"> -->
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest"> -->
-    <link rel="icon" type="image/x-icon" href="docs/assets/images/Panoramic-4.ico">
+    <!-- <link rel="icon" type="image/x-icon" href="docs/assets/images/Panoramic-4.ico"> -->
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 
