Testing a different approach to the DigitalAirport
I am going to start messing with a different idea -> Getting the data with python, pushing it to GitHub and then fetching it with JS

No idea if it's gonna work as intended, but we will see

08.12.2024 - 17:54

--- a/src/digital_airport.html
+++ b/src/digital_airport.html
@@ -50,8 +50,21 @@
         </nav>
     </div>
     <div class="main">
+        <script>
+            fetch("docs/AirlineInfo.txt").then(response => {
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+                return response.text();
+            })
+                .then(data => {
+                    console.log(data);
+                })
+                .catch(error => {
+                    console.error('There was a problem with the fetch operation:', error);
+                });
+        </script>
     </div>
-    <script src="DigitalAirport.js"></script>
 </body>
 
 </html>
